--- a/yes.html
+++ b/yes.html
@@ -57,17 +57,16 @@ h1{
 
 <!-- 🎵 Background Song -->
 <audio autoplay loop>
-    <source src="song.mp3" type="audio/mpeg">
+    <source src="Elliot James Reay-01-I Think They Call This Love.mp3" type="audio/mpeg">
 </audio>
 
 <!-- Replace with your image -->
-<img src="image.jpeg" alt="Your Image">
+<img src="IMG_6666.png" alt="Your Image">
 
-<h1>Best decision ever!! I love you the most. ❤️
-Chalo abb Date Par. See you! ;) </h1>
-<p> You are the most important person in my life and regardless of what happens in future, you will still remain to be the person whom I cherish the most. I will be there beside you, if you need me or not. Despite every possibilities, I really wish that we remain in each other's life. Cheers to a better life and more. Take Love from an engineer.</p>
+<h1>Best decision ever!! I love you more than anything. ❤️ </h1>
+<p> My feelings might not be loud promises or grand gestures, just a quiet devotion that says, I’m here. Here to listen when the past feels heavy, here to move at your pace, here to care for your with honesty and respect. I hope that, in time, you will feel safe enough to believe that love can be soft again—and if you lets me, I’d like to be someone who treats your heart like something precious, never something to break.</p>
 <p>Yours truly,</p>
-<p>A Dick-Holder</p>
+<p>Suhrid</p>
 
 <script>
 /* Hearts generator */
@@ -84,3 +83,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
