--- a/yes.html
+++ b/yes.html
@@ -64,7 +64,7 @@ h1{
 <img src="IMG_6666.png" alt="Your Image">
 
 <h1>Best decision ever!! I love you more than anything. ❤️ </h1>
-<p> My feelings might not be loud promises or grand gestures, just a quiet devotion that says, I’m here. Here to listen when the past feels heavy, here to move at your pace, here to care for your with honesty and respect. I hope that, in time, you will feel safe enough to believe that love can be soft again—and if you lets me, I’d like to be someone who treats your heart like something precious, never something to break.</p>
+<p> My feelings might not be loud promises or grand gestures, just a quiet devotion that says, I’m here. Here to listen when the past feels heavy, here to move at your pace, here to care for your feelings with honesty and respect. I hope that, in time, you will feel safe enough to believe that love can be soft again—and if you lets me, I’d like to be someone who treats your heart like something precious, never something to break.</p>
 <p>Yours truly,</p>
 <p>Suhrid</p>
 
@@ -83,5 +83,6 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
