--- a/yes.html
+++ b/yes.html
@@ -5,17 +5,30 @@
 <title>Yay!</title>
 
 <style>
-body{
-    background: linear-gradient(135deg,#ff9a9e,#fad0c4);
-    font-family: Arial, sans-serif;
-    text-align:center;
-    height:100vh;
-    overflow:auto;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
+  html, body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
 }
+
+body {
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  font-family: Arial, sans-serif;
+  text-align: center;
+
+  /* layout */
+  display: flex;
+  flex-direction: column;
+
+  /* scrolling fix */
+  min-height: 100vh;
+  overflow-y: auto;
+
+  /* optional centering */
+  align-items: center;
+  justify-content: flex-start;
+}
+
 
 img{
     width:500px;
@@ -83,6 +96,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
